container-ns-template.yml
# Plant namespace
apiVersion: v1
kind: Namespace
metadata:
  name: ${CONTAINER_LABEL}-ns
  labels:
    shared-gateway-access: "true"
