container-depl-template.yml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${CONTAINER_LABEL}
  namespace: ${CONTAINER_LABEL}-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${CONTAINER_LABEL}
  template:
    metadata:
      labels:
        app: ${CONTAINER_LABEL}
    spec:
      containers:
        - name: ${CONTAINER_LABEL}
          image: ${IMAGE}
---

# ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: ${CONTAINER_LABEL}-srv
  namespace: ${CONTAINER_LABEL}-ns
spec:
  type: ClusterIP
  selector:
    app: ${CONTAINER_LABEL}
  ports:
    - name: ccp
      protocol: TCP
      port: 8080
      targetPort: 8080
