container-route-template.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${CONTAINER_LABEL}-srv
  namespace: ${CONTAINER_LABEL}-ns
spec:
  parentRefs:
    - name: gateway-srv
      namespace: gateway-ns
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/${CONTAINER_LABEL}
      backendRefs:
        - name: ${CONTAINER_LABEL}-srv
          port: 8080
